[package]
name = "fblog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9"
log = "0.4.14"
chrono = { version = "0.4.19", features = ["unstable-locales"] }
pnet = "0.28.0"
gethostname = "0.2.1"
lazy_static = "1.4.0"
once_cell = "1.8.0"
flexi_logger = { git = "https://github.com/abclmnoxyz/flexi_logger" }
syslog = { git = "https://github.com/FBSocial/rust-syslog.git" }
anyhow = "1.0.44"
time = { version = "0.3.4", features = ["macros", "local-offset"] }

#toolbox = {path = "../toolbox"}
